--- a/3.Styling.html
+++ b/3.Styling.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 Styling</title>
 </head>
-<body>
-    
+<body style = "background-color:aqua">
+    <h1 style = "color:red;font-size: 20px;">Kırmızı Başlık</h1>
 </body>
 </html>
