CSS files uploaded

--- a/12.Div-Span.html
+++ b/12.Div-Span.html
@@ -7,6 +7,11 @@
     <title>Div & Span</title>
 
     <style>
+        div{
+            border: 50px solid black;
+            background-color: green;
+            color: red;
+        }
         span{
             border: 1px solid red;
         }
